design: 에디터 작성 시 리스트의  bullet이 잘 보이도록 왼쪽 패딩 추가

--- a/client/src/ckeditor.css
+++ b/client/src/ckeditor.css
@@ -12,3 +12,11 @@
 .ck-editor__editable_inline {
   width: 700px;
 }
+
+.ck-editor__editable_inline {
+  padding: 0 15px !important;
+}
+
+.ck-editor__editable_inline li {
+  list-style-position: inside;
+}
